# ChangeLog for media-libs/speex
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/ChangeLog,v 1.95 2010/08/24 02:54:21 ssuominen Exp $

  24 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> speex-1.2_rc1.ebuild:
  Use append-lfs-flags. USE static-libs and punt .la files.

  11 Dec 2009; Brent Baude <ranger@gentoo.org> speex-1.2_rc1.ebuild:
  Marking speex-1.2_rc1 ppc64 for bug 289701

  18 Nov 2009; Raúl Porcel <armin76@gentoo.org> speex-1.2_rc1.ebuild:
  ia64/sh/sparc stable wrt #289701

  10 Nov 2009; Markus Meier <maekke@gentoo.org> speex-1.2_rc1.ebuild:
  arm/x86 stable, bug #289701

  26 Oct 2009; Tobias Klausmann <klausman@gentoo.org> speex-1.2_rc1.ebuild:
  Stable on alpha, bug #289662

  24 Oct 2009; nixnut <nixnut@gentoo.org> speex-1.2_rc1.ebuild:
  ppc stable #289701

  21 Oct 2009; Jeroen Roovers <jer@gentoo.org> speex-1.2_rc1.ebuild:
  Stable for HPPA (bug #289701).

  19 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> speex-1.2_rc1.ebuild:
  amd64 stable wrt #289701

*speex-1.2_rc1 (31 Jul 2008)

  31 Jul 2008; Patrick McLean <chutzpah@gentoo.org>
  +files/speex-1.2_rc1-configure.patch, +speex-1.2_rc1.ebuild:
  Version bump.

  16 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
  speex-1.2_beta3_p2.ebuild:
  Disable tests building during src_compile, closes bug #226245.

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> speex-1.2_beta3_p2.ebuild:
  ia64 stable

  17 Apr 2008; Markus Meier <maekke@gentoo.org> speex-1.2_beta3_p2.ebuild:
  x86 stable, bug #217715

  16 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  speex-1.2_beta3_p2.ebuild:
  ppc stable, bug #217715

  15 Apr 2008; Tobias Klausmann <klausman@gentoo.org>
  speex-1.2_beta3_p2.ebuild:
  Stable on alpha, bug #217715 (this time for real)

  15 Apr 2008; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Stable on alpha, bug #217715

  15 Apr 2008; Samuli Suominen <drac@gentoo.org> speex-1.2_beta3_p2.ebuild: