@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX speex-1.2_rc1-configure.patch 874 RMD160 5b361daaf91abaf4ef62e9ccc7c24432e846f319 SHA1 1ce1a2e82a2a11fbc5065050859102fbfc409737 SHA256 205aa8a4ba729f015535b084f8932c19f5efaa35f81df8b8dc807201fb40c922
 DIST speex-1.2rc1.tar.gz 1061882 RMD160 6f4a11ef910b0db9b820826bcac3da1b79cad3a1 SHA1 52daa72572e844e5165315e208da539b2a55c5eb SHA256 342f30dc57bd4a6dad41398365baaa690429660b10d866b7d508e8f1179cb7a6
-EBUILD speex-1.2_rc1.ebuild 1162 RMD160 22b4672239a25cdebd3d856d255bf7e1520125ae SHA1 92a923fa7bbf4800499399061ad5910f0d7de6a2 SHA256 d8498e1e3b39c6e1216604e9e5a873e8d8d8cdec47cf6850c7a5ef3bd84cea06
-MISC ChangeLog 12303 RMD160 7e65c2c5ca706362d958214a0bfb68137a6bc7cb SHA1 90954746b7736f4fd8b28a4e87d0652bae773fb2 SHA256 85d331c21ca2ff0ef3cf20ae7e7f29cab459166c7b2a72fed58b0e28e19740ec
+EBUILD speex-1.2_rc1.ebuild 1183 RMD160 b22f100952c3edef7af53ab860f0a5bb82e149d8 SHA1 8d815c7f5cd535e3cba1324c4aee80681f6f6eb5 SHA256 536d30919a90108e8e6e567c0c427effa43a2a83a01edd418134b7a271e5207f
+MISC ChangeLog 12447 RMD160 a73f2cc265a97ee2788f087daeb77bc876bbfc5d SHA1 600103cbf2332334cdf8e6a94a443c4823c00845 SHA256 e32030e839c431aa53d04c10280fdadd377331dabf645e24aebb6a2e21460166
 MISC metadata.xml 227 RMD160 db91bfb1298cfaa0069ba0d53f7d8f2791f7d344 SHA1 51ff8c11f7cb3c6b7a97ff2c24af697f1f5ac2ca SHA256 0f8c8d5cb2453a9adf2c7c88c98e613ef02ca8640ecc46379fe9a5e50f7bff7b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk4lwr8ACgkQXkR9YqOcLPF5MwD/U/wnrry/Lv+D2mS4uRQGoab0
+xFtLQiK5kQ8V1H7NuWcA+QF2Q0CNwLfBsNqjZsRrsf86VVx2QQ5CkICyRh7/uX+p
+=3VWL
+-----END PGP SIGNATURE-----
